# pyfabric

./: .codespellrc  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_MEMORY_TODO.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml
docs/: api.md  prompts.md  roadmap.md  testing.md  vision.md
examples/: workspace_demo.py
src/pyfabric/: __init__.py  _logging.py  claude_install.py  cli.py  demo.py  logging.py
src/pyfabric/claude_memory/: MEMORY.md  descriptions_required.md  first_refresh_cred_binding.md  notebook_wheel_resources_pattern.md  onelake_vs_sql_endpoint.md  open_mirror_landing_zone.md  pyfabric.md  wheel_sqlconn_pattern.md
src/pyfabric/client/: __init__.py  auth.py  graph.py  http.py  livy.py  ontology.py  ontology_sync.py
src/pyfabric/client/ontology/: __init__.py  _id_gen.py  builder.py  crud.py  parts.py
src/pyfabric/data/: __init__.py  lakehouse.py  local_lakehouse.py  onelake.py  open_mirror.py  processing_log.py  schema.py  sql.py  sqlconn.py
src/pyfabric/items/: __init__.py  bundle.py  crud.py  environment.py  mirrored_database.py  normalize.py  notebook.py  report.py  semantic_model.py  types.py  validate.py  validate_tmdl.py
src/pyfabric/testing/: __init__.py  analyze.py  duckdb_spark.py  fixtures.py  mock_notebookutils.py  plugin.py
src/pyfabric/workspace/: __init__.py  workspaces.py
tests/: conftest.py  test_claude_install.py  test_cli.py  test_cli_normalize.py  test_demo.py  test_logging.py  test_pyproject_metadata.py  test_version.py
tests/client/: test_auth.py  test_auth_errors.py  test_graph_errors.py  test_http.py  test_http_errors.py  test_livy.py  test_livy_errors.py  test_ontology.py  test_ontology_parts.py
tests/data/: test_lakehouse.py  test_lakehouse_ddl.py  test_local_lakehouse_push.py  test_local_lakehouse_rename_schema.py  test_local_lakehouse_schema_drift.py  test_onelake.py  test_onelake_walk_cache.py  test_open_mirror.py  test_open_mirror_write_rows.py  test_processing_log.py  test_sample_db.py  test_schema.py  test_schema_validation.py  test_sql_errors.py  test_sqlconn.py  test_upload_retry.py
tests/fixtures/: create_sample_db.py
tests/fixtures/mirrors/mirror_custom.MirroredDatabase/: mirroring.json
tests/fixtures/mirrors/mirror_default.MirroredDatabase/: mirroring.json
tests/fixtures/notebooks/nb_full.Notebook/: notebook-content.py
tests/fixtures/workspace/df_example.Dataflow/: .platform  queryMetadata.json
tests/fixtures/workspace/env_example.Environment/: .platform
tests/fixtures/workspace/env_example.Environment/Libraries/PublicLibraries/: environment.yml
tests/fixtures/workspace/env_example.Environment/Setting/: Sparkcompute.yml
tests/fixtures/workspace/lh_example.Lakehouse/: .platform  lakehouse.metadata.json
tests/fixtures/workspace/nb_example.Notebook/: .platform  notebook-content.py
tests/fixtures/workspace/pl_example.DataPipeline/: .platform
tests/fixtures/workspace/pl_example.Pipeline/: .platform
tests/fixtures/workspace/rpt_example.Report/: .platform  report.json
tests/fixtures/workspace/sm_example.SemanticModel/: .platform  model.bim
tests/fixtures/workspace/vl_example.VariableLibrary/: .platform  settings.json  variables.json
tests/fixtures/workspace/vl_example.VariableLibrary/valueSets/: DEV.json
tests/fixtures/workspace/wh_example.Warehouse/: .platform
tests/fixtures/workspace_invalid/nb_no_content.Notebook/: .platform
tests/fixtures/workspace_invalid/wrong_name.Lakehouse/: .platform
tests/items/: test_bundle_errors.py  test_crud.py  test_environment.py  test_mirrored_database.py  test_normalize.py  test_notebook.py  test_report.py  test_semantic_model.py  test_types.py  test_validate.py  test_validate_e2e.py  test_validate_pairwise.py  test_validate_tmdl.py
tests/testing/: test_analyze.py  test_attach_duckdb_lakehouse.py  test_duckdb_spark.py  test_mock_notebookutils.py  test_snapshot_delta.py
tests/workspace/: test_workspaces.py
