[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfabric"
dynamic = ["version"]
description = "Python libraries helping AI coding assistants create and locally validate Microsoft Fabric items compatible with Fabric git sync."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Creative Planning", email = "engineering@creativeplanning.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["microsoft-fabric", "fabric", "git-sync", "copilot", "ai", "validation", "testing"]
dependencies = []

[project.urls]
Homepage = "https://github.com/Creative-Planning/pyfabric"
Repository = "https://github.com/Creative-Planning/pyfabric"

[project.scripts]
pyfabric = "pyfabric.cli:main"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.25.3",
    "requests>=2.33.1",
]
data = [
    "pyodbc>=5.3.0",
    "azure-storage-file-datalake>=12.23.0",
]
testing = [
    "duckdb>=1.5.1",
    "deltalake>=1.5.0",
    "pytest>=9.0.3",
]
all = [
    "pyfabric[azure]",
    "pyfabric[data]",
    "pyfabric[testing]",
]
dev = [
    "pyfabric[all]",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=1.20.0",
    "ruff>=0.15.10",
    "pip-audit>=2.10.0",
    "build>=1.4.3",
]

# -- Hatch version from git tags ------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyfabric/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfabric"]

# -- Ruff ------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.lint.isort]
known-first-party = ["pyfabric"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# -- Mypy ------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# -- Pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
