[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfabric"
dynamic = ["version"]
description = "Python libraries helping AI coding assistants create and locally validate Microsoft Fabric items compatible with Fabric git sync."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Creative Planning", email = "20804442+hughdecatte@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["microsoft-fabric", "fabric", "git-sync", "copilot", "ai", "validation", "testing"]
dependencies = [
    "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/Creative-Planning/pyfabric"
Repository = "https://github.com/Creative-Planning/pyfabric"

[project.scripts]
pyfabric = "pyfabric.cli:main"

[project.entry-points.pytest11]
pyfabric = "pyfabric.testing.plugin"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17",
    "requests>=2.32",
]
data = [
    "pyodbc>=5.1",
    "azure-storage-file-datalake>=12.17",
]
testing = [
    "duckdb>=1.1",
    "deltalake>=0.21",
    "pyarrow>=17",
    "pytest>=8.0",
]
all = [
    "pyfabric[azure]",
    "pyfabric[data]",
    "pyfabric[testing]",
]
dev = [
    "pyfabric[all]",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-json-report>=1.5",
    "allpairspy>=2.5",
    "hypothesis>=6.100",
    "mypy>=1.13",
    "ruff>=0.8",
    "pip-audit>=2.7",
    "build>=1.2",
]

# -- Hatch version from git tags ------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyfabric/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfabric"]

# -- Ruff ------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.lint.isort]
known-first-party = ["pyfabric"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# -- Mypy ------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = ["requests.*", "pyodbc.*", "pyarrow.*", "pandas.*", "duckdb.*", "structlog.*"]
ignore_missing_imports = true

# Ported fabric-libs modules — strict typing will be added iteratively.
# Remove modules from this list as they get proper type annotations.
[[tool.mypy.overrides]]
module = [
    "pyfabric.client.auth",
    "pyfabric.client.http",
    "pyfabric.client.graph",
    "pyfabric.client.livy",
    "pyfabric.client.ontology",
    "pyfabric.client.ontology.*",
    "pyfabric.client.ontology_sync",
    "pyfabric.data.*",
    "pyfabric.workspace.*",
    "pyfabric.items.bundle",
    "pyfabric.items.crud",
    "pyfabric.cli",
]
ignore_errors = true

# -- Pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--json-report",
    "--json-report-file=.test-report.json",
]
xfail_strict = true
markers = [
    "e2e: end-to-end tests requiring PYFABRIC_TEST_WORKSPACE env var",
]

# -- Coverage --------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["src/pyfabric"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
